--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:round="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -9,6 +10,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/colorBackground"
-    tools:context="com.doemski.leanalarm.MainActivity">
+    tools:context="com.doemski.leanalarm.MainActivity"
+    android:orientation="vertical">
+    <com.doemski.leanalarm.TiltableRoundView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            round:tiltable="true"
+            round:shadow="true"/>
+</LinearLayout>
 
-</RelativeLayout>
+
